<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F5FFFA">
        <TextView
            android:id="@+id/appTitle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/colorSecondary"
            android:text="@string/page_create"

            android:gravity="center"

            android:textColor="#ffff"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Name"
            android:inputType="text"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/Init"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Init"
            android:inputType="number"
            android:textSize="20dp" />


        <EditText
            android:id="@+id/Comm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Comm"
            android:inputType="text"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="#F5FFFA">

            <Button
                android:id="@+id/Create"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_create" />
            <Button
                android:id="@+id/Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>